filesystem/fhcfg/firewall.conf
# Generated by iptables-save v1.4.16.3 on Thu Jan  1 00:00:38 1970
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:forward_ext_bad_tcp - [0:0]
:forward_ext_captiveportal - [0:0]
:forward_ext_ds_ip - [0:0]
:forward_ext_ip - [0:0]
:forward_ext_mac - [0:0]
:forward_ext_url - [0:0]
:forward_ext_us_ip - [0:0]
:input_ext_access_ctrl - [0:0]
:input_ext_access_telnet_ani - [0:0]
:input_ext_access_telnet_uni - [0:0]
:input_ext_access_web_ani - [0:0]
:input_ext_access_web_uni - [0:0]
:input_ext_acl - [0:0]
:input_ext_anti - [0:0]
:input_ext_dhcp - [0:0]
:input_ext_ds_acl - [0:0]
:input_ext_local_access - [0:0]
:input_ext_local_access_ex - [0:0]
:input_ext_us_acl - [0:0]
-A INPUT -j input_ext_access_ctrl
-A INPUT -j input_ext_local_access
-A INPUT -p tcp -m tcp --dport 80 -j input_ext_acl
-A INPUT -p tcp -m tcp --dport 21 -j input_ext_acl
-A INPUT -p udp -m udp --dport 161 -j input_ext_acl
-A INPUT -p tcp -m tcp --dport 23 -j input_ext_acl
-A INPUT -p tcp -m tcp --dport 22 -j input_ext_acl
-A INPUT -p icmp -j input_ext_acl
-A INPUT -i br0 -p udp -m udp --dport 67 -j input_ext_dhcp
-A INPUT -j input_ext_anti
-A FORWARD -p tcp -j forward_ext_bad_tcp
-A FORWARD -j forward_ext_ip
-A FORWARD -j forward_ext_url
-A FORWARD -j forward_ext_mac
-A FORWARD -i br0 -p tcp -m tcp --dport 80 -j forward_ext_captiveportal
-A input_ext_access_ctrl -p tcp -m tcp --dport 23 -j input_ext_access_telnet_uni
-A input_ext_access_ctrl -p tcp -m tcp --dport 23 -j input_ext_access_telnet_ani
-A input_ext_access_ctrl -p tcp -j input_ext_access_web_uni
-A input_ext_access_ctrl -p tcp -j input_ext_access_web_ani
-A input_ext_acl -i br0 -j input_ext_us_acl
-A input_ext_anti -p tcp -m tcp --dport 123 -j ACCEPT
-A input_ext_anti -p udp -m udp --dport 123 -j ACCEPT
-A input_ext_anti -p tcp -m tcp --dport 3011 -j ACCEPT
-A input_ext_anti -p udp -m udp --dport 3011 -j ACCEPT
-A input_ext_anti -p tcp -m tcp --dport 5060 -j ACCEPT
-A input_ext_anti -p udp -m udp --dport 5060 -j ACCEPT
-A input_ext_anti -p tcp -m tcp --dport 2944 -j ACCEPT
-A input_ext_anti -p udp -m udp --dport 2944 -j ACCEPT
-A input_ext_anti -p tcp -m tcp --dport 8099 -j ACCEPT
-A input_ext_anti -p udp -m udp --dport 8099 -j ACCEPT
-A input_ext_local_access -j input_ext_local_access_ex
COMMIT
# Completed on Thu Jan  1 00:00:38 1970
